--- a/index.html
+++ b/index.html
@@ -72,5 +72,5 @@ Para C0GER con cualquier Jovencita, presione el boton ENTRAR Abajo, y haga su "R
 </body>
 </html>
   <div class="logo">
-<img src="https://imgur.com/Io9CsHf.jpg" alt="">
+<img src="https://imgur.com/krNfESR.jpg" alt="">
 </div>
